# Mothership

./: .gitignore  CMakeLists.txt  LICENSE  README.md
sources/: client.cpp  main.cpp
